Kubernetes-notes/07.Service/ingress/deploy-nodeport-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app2
  labels:
    app: app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: nginx
        image: 230882/nginx:app2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc2
spec:
  type: NodePort
  selector:
    app: app2
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 30082
---
